// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`(Base Styles) desktopGrid matching the snapshot 1`] = `
.c0 {
  grid-template-columns: repeat(12,1fr);
}

<div
  className="c0"
/>
`;

exports[`(Base Styles) desktopMargins matching the snapshot 1`] = `
.c0 {
  margin: 0 7%;
}

<div
  className="c0"
/>
`;

exports[`(Base Styles) grid matching the snapshot 1`] = `
.c0 {
  grid-gap: 10px;
  display: grid;
  grid-auto-flow: row;
  grid-template-columns: repeat(4,1fr);
  grid-row-gap: 2rem;
  grid-column-gap: 10px;
}

@media (min-width:76.8em) {
  .c0 {
    grid-template-columns: repeat(10,1fr);
  }
}

@media (min-width:128em) {
  .c0 {
    grid-template-columns: repeat(12,1fr);
  }
}

<div
  className="c0"
/>
`;

exports[`(Base Styles) mobileMargins matching the snapshot 1`] = `
.c0 {
  margin: 0 3%;
}

<div
  className="c0"
/>
`;

exports[`(Base Styles) tabletGrid matching the snapshot 1`] = `
.c0 {
  grid-template-columns: repeat(10,1fr);
}

<div
  className="c0"
/>
`;

exports[`(Base Styles) tabletMargins matching the snapshot 1`] = `
.c0 {
  margin: 0 7%;
}

<div
  className="c0"
/>
`;
